--- a/index.html
+++ b/index.html
@@ -15,33 +15,33 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="index.html"><span class="current">Home</span></a></li>
-                    <li><a href="services.html">Services</a></li>
-                    <li><a href="about.html">About</a></li>
+                    <li><a href="./index.html"><span class="current">Home</span></a></li>
+                    <li><a href="./services.html">Services</a></li>
+                    <li><a href="./about.html">About</a></li>
                 </ul>
             </nav>
         </div>
     </header>
 
     <section class="showcase">
-        <div class="container">
-            <h1>Web Design Done the Modern Way</h1>
+        <div class="container heroText">
+            <h1>Web Design Done the <span class="modern">Modern</span> Way</h1>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque deserunt, cumque iste corporis itaque quis.</p>
         </div>
     </section>
 
     <section class="newsletter">
         <div class="container">
-            <h1>Subscribe To Our Newsletter</h1>
+            <h1>Subscribe <!--To Our Newsletter --></h1>
             <form action="#">
                  <input type="email" placeholder="Enter Email">
-                 <button class="newsletterButton">Submit</button>
+                 <button class="newsletterButton">Subscribe</button>
             </form>
         </div>
     </section>
 
     <section class="boxes">
-        <div class="container">
+        <div class="container grid-3">
             <div class="box">
                 <img src="blueprint.png" alt="">
                 <h3>Prototyping</h3>
