--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <section class="newsletter">
         <div class="container">
-            <h1>Subscribe <!--To Our Newsletter --></h1>
+            <h1>Subscribe To Our Newsletter</h1>
             <form action="#">
                  <input type="email" placeholder="Enter Email">
                  <button class="newsletterButton">Subscribe</button>
